--- a/Ek.Shop.Web/package.json
+++ b/Ek.Shop.Web/package.json
@@ -18,84 +18,89 @@
     "compodoc": "./node_modules/.bin/compodoc -p tsconfig.json"
   },
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/platform-server": "^5.1.2",
-    "@angular/router": "^5.1.2",
-    "@angular/service-worker": "^5.2.2",
-    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
-    "@nguniversal/common": "^5.0.0-beta.5",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
-    "@types/node": "^7.0.12",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@angular/service-worker": "^6.0.3",
+    "@nguniversal/aspnetcore-engine": "^6.0.0",
+    "@nguniversal/common": "^6.0.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "@types/node": "^10.1.2",
     "angular-confirmation-popover": "^3.4.1",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "^3.0.0",
+    "aspnet-webpack": "^2.0.3",
+    "awesome-typescript-loader": "^5.0.0",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.5.1",
-    "css": "^2.2.1",
-    "css-loader": "^0.28.7",
-    "event-source-polyfill": "^0.0.9",
-    "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.5.1",
+    "core-js": "^2.5.6",
+    "css": "^2.2.3",
+    "css-loader": "^0.28.11",
+    "event-source-polyfill": "^0.0.12",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
-    "json-loader": "^0.5.4",
-    "moment": "2.18.1",
+    "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
+    "moment": "2.22.1",
     "ng-http-loader": "^0.5.1",
-    "ngx-bootstrap": "2.0.0-beta.6",
+    "ngx-bootstrap": "^3.0.0",
     "ngx-toastr": "^8.1.0",
-    "node-sass": "^4.5.2",
-    "preboot": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "preboot": "^6.0.0-beta.4",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.5.6",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
-    "typescript": "2.5.x",
-    "url-loader": "^0.5.7",
+    "typescript": "~2.7.2",
+    "url-loader": "^1.0.1",
     "web-animations-js": "^2.3.1",
-    "webpack": "^3.6.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0",
-    "zone.js": "^0.8.17"
+    "webpack": "^4.9.1",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.0-beta.1",
-    "@angular/compiler-cli": "^5.2.1",
-    "@ngtools/webpack": "^1.9.0",
-    "@types/chai": "^3.4.34",
-    "@types/jasmine": "^2.5.37",
+    "@angular/cli": "^6.0.5",
+    "@angular/compiler-cli": "6.0.3",
+    "@ngtools/webpack": "^6.0.5",
+    "@types/chai": "^4.1.3",
+    "@types/jasmine": "^2.8.7",
     "angular-file": "^0.3.7",
-    "chai": "^3.5.0",
-    "codelyzer": "^3.0.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
+    "chai": "^4.1.2",
+    "codelyzer": "^3.1.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.4",
+    "karma-jasmine": "^1.1.2",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "tslint": "^5.7.0",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "karma-webpack": "^2.0.4",
+    "tslint": "^5.10.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
+    "@angular-devkit/build-angular": "~0.6.6"
   }
 }
